--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "framer-motion": "^12.23.12",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
