--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -4,6 +4,6 @@
   publish = "dist"
 
 [[redirects]]
-  from = "/api/*"
-  to = "https://backend-winter-smoke-307.fly.dev//api/:splat"
+  from = "/*"
+  to = "/index.html"
   status = 200
